--- a/src/Plugins/Nop.Plugin.RRAGoldFingers.WhatsApp/Nop.Plugin.RRAGoldFingers.WhatsApp.csproj
+++ b/src/Plugins/Nop.Plugin.RRAGoldFingers.WhatsApp/Nop.Plugin.RRAGoldFingers.WhatsApp.csproj
@@ -14,6 +14,7 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="logo.png" />
     <None Remove="plugin.json" />
     <None Remove="Views\Configure.cshtml" />
     <None Remove="Views\_ViewImports.cshtml" />
@@ -23,6 +24,9 @@
     <ClearPluginAssemblies Include="$(MSBuildProjectDirectory)\..\..\Build\ClearPluginAssemblies.proj" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="logo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="plugin.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
